--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
     <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
     <string name="convert">Convert</string>
+    <string name="textview">TextView</string>
+    <string name="history">TextView1</string>
+    <string name="converterHistory">TextView</string>
+    <string name="convertHistory">TextView</string>
 </resources>
